# ixemul

./: BUGS  ChangeLog  GNUmakefile  INSTALL  Makefile  Makefile.in  NEWS  News.txt  PROBLEMS  Product-Info  README  README.pOS  REGISTRY  TODO  changelog.txt  config.cache  config.sub  configure  configure.in  nohup.out  version.in
db/: Makefile  Makefile.in
db/btree/: bt_conv.c  bt_delete.c  bt_get.c  bt_open.c  bt_put.c  bt_seq.c  bt_split.c  bt_utils.c  btree.h
db/db/: db.c
db/hash/: hash.c  hash_bigkey.c  hash_buf.c  hash_func.c  hash_page.c  hsearch.c  ndbm.c
db/mpool/: mpool.c
db/recno/: extern.h  rec_close.c  rec_delete.c  rec_open.c  rec_put.c  rec_seq.c  recno.h
general/: Makefile  Makefile.in  alarm.c  arith.c  clock.c  common.h  crypt.c  ctype_.c  cuserid.c  difftime.c  errlst.c  fnmatch.c  getmntinfo.c  getwd.c  glob.c  inet_network.c  insque.c  isctype.c  isinf.c  isnan.c  localeconv.c  pause.c  popen.c  psignal.c  raise.c  random.c  remque.c  setlocale.c  siginterrupt.c  siglist.c  signal.c  sigsetops.c  sleep.c  termios.c  time.c  times.c  types.h  ualarm.c  uname.c  unvis.c  (+5 more)
glue/: Makefile  Makefile.in  gen_glue.c  gen_glue.c_n
include/: _G_config.h  ctype.h  db.h  dirent.h  err.h  errno.h  features.h  fnmatch.h  fts.h  getaddrinfo.h  glob.h  glue.h  grp.h  inetd.h  inttypes.h  ix.h  kvm.h  libgen.h  locale.h  math-68881.h  math.h  mpool.h  ndbm.h  netdb.h  netgroup.h  nlist.h  packets.h  paths.h  regex.h  regexp.h  setjmp.h  signal.h  stab.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h  time.h  ttyent.h  (+7 more)
include/amitcp/: socketbasetags.h
include/arpa/: ftp.h  inet.h  nameser.h  tftp.h
ixemul/: COPYRIGHT  Makefile.in  News.txt  README.MorphOS  changelog.txt  config.guess  config.status  ixemul_configure_68k.txt  version.in
ixnet/: Makefile.bak  Makefile.in  amitcp.h  as225.h  create_header.c  gates.c  getdomainname.c  getgrent.c  gethostid.c  gethostnamadr.c  getnetbyaddr.c  getnetbyname.c  getnetent.c  getproto.c  getprotoent.c  getprotoname.c  getpwent.c  getservbyname.c  getservbyport.c  getservent.c  herror.c  initgroups.c  ix_internals_backup.h  ix_panic.c  ixnet.h  ixnet_close.c  ixnet_expunge.c  ixnet_init.c  ixnet_open.c  misc.c  parse_version.c  set_errno.c  sethostent.c  siglaunch.c  socket.c  start.S  start.S.orig  start.c  syslog.c  usergroup.h
libm/: dummy.c  makefile
libsrc/: Makefile  Makefile.in  crt0.c  gmon.c  ixconvert.c  v1.c
man/: Makefile  Makefile.in
manifests/: bin  env-bin-pi  inc-bin  inc-bin-pi  src
net/: Makefile  Makefile.in  getnetgrent.c  getttyent.c  linkaddr.c  rcmd.c  res_comp.c  res_debug.c  res_init.c  res_mkquery.c  res_query.c  res_send.c  ttyname.c  ttyslot.c
stack/: Makefile  Makefile.in  a4.h  debugstub.c  glue.c  link_a5_0_f.c  link_a5_d0_f.c  stack.c  stk_limit.c  stkchk1.c  stkchk_d0.c  stkext1.c  sub_d0_sp.c
static/: Makefile.in  _err.c  ctermid.c  err.c  exp2f.c  ftok.c  fts.c  getaddrinfo.c  inet_pton.c  localtime.c  localtime_r.c  log2.c  memcpy.c  private.h  rand48.c  regerror.c  regexec.c  regfree.c  rint.c  round.c  roundf.c  scandir.c  sqrtf.c  strlcpy.c  trunc.c  truncf.c  utils.h  vfork_setup_child.c
stdio/: Makefile  Makefile.in  clrerr.c  fclose.c  fdopen.c  feof.c  ferror.c  fflush.c  fgetc.c  fgetln.c  fgetpos.c  fgets.c  fileno.c  findfp.c  flags.c  floatio.h  fopen.c  fprintf.c  fpurge.c  fputc.c  fputs.c  fread.c  freopen.c  fscanf.c  fseek.c  fsetpos.c  ftell.c  funopen.c  fvwrite.c  fvwrite.h  fwalk.c  fwrite.c  getc.c  getchar.c  gets.c  getw.c  makebuf.c  mktemp.c  perror.c  printf.c  (+29 more)
stdlib/: Makefile  Makefile.in  abort.c  abs.c  atexit.c  atexit.h  atof.c  atoi.c  atol.c  bsearch.c  calloc.c  div.c  exec.c  execve.c  getenv.c  heapsort.c  labs.c  ldiv.c  multibyte.c  putenv.c  qsort.c  radixsort.c  rand.c  setenv.c  ssystem.c  stdlib_null_pointer_check.h  strtod.c  strtol.c  strtoq.c  strtoul.c  strtouq.c  system.c
string/: Makefile  Makefile.in  bcmp.c  bcopy.c  bzero.c  ffs.c  index.c  memccpy.c  memcpy.c  memmove.c  rindex.c  strcasecmp.c  strcmp.c  strcoll.c  strcpy.c  strcspn.c  strdup.c  strerror.c  strftime.c  strlen.c  strmode.c  strncmp.c  strncpy.c  strpbrk.c  strsep.c  strspn.c  strtok.c  swab.c
utils/: ChangeLog  Makefile.in  amiga.c  amiga_functions.c  amiga_gui.c  amiga_gui.gui  amiga_gui.h  cli.c  getopt.c  getopt.h  getopt1.c  ipcs.c  ixpipe-handler.c  ixprefs.guide  ixprefs.guide.info  ixprefs.h  ixprefs.info  ixrun.c  ixstack.c  ixtimezone.c  ixtrace.c  ixtrace.h  main.c  pos.c  scheck.c  util.c  version.h  zic.c
wchar/: Makefile  fgetwc.c  getwc.c  mblen.c  mbrlen.c  mbsrtowcs.c  putwchar.c  wcrtomb.c  wcschr.c  wcscoll.c  wcscpy.c  wcslen.c  wcsncat.c  wcsncpy.c  wcspbrk.c  wcsrchr.c  wcsxfrm.c  wctob.c  wctomb.c  wctype.c  wmemcpy.c  wmemmove.c
(+492 files in other folders)
